# CryptoFarmMonitor

./: AppStartup.cpp  AppStartup.hpp  CMakeLists.txt  main.cpp
core/enums/: Environment.h
core/extensions/: LoggingExtensions.cpp  LoggingExtensions.hpp  StringExtensions.cpp  StringExtensions.hpp
core/services/crypto/: Bech32.cpp  Bitcoin.cpp  Bitcoin.h
core/services/logging/: AppInsightsLogger.cpp  AppInsightsLogger.hpp
core/services/retrofit/: CoinmarketCapClient.cpp  CoinmarketCapClient.h
core/viewModels/manager/: AppDashboardViewModel.cpp  AppDashboardViewModel.hpp
core/viewModels/manager/nodes/: AppNodesViewerViewModel.cpp  AppNodesViewerViewModel.h
core/viewModels/security/: LoginScreenViewModel.cpp  LoginScreenViewModel.hpp
presentation/screens/: BaseScreen.cpp  BaseScreen.h
presentation/screens/manager/: AppDashboard.cpp  AppDashboard.hpp
presentation/screens/manager/nodes/: AppNodesViewer.cpp  AppNodesViewer.hpp
presentation/screens/security/: LoginScreen.cpp  LoginScreen.hpp
presentation/viewComponents/buttons/: BaseColorButton.h  IconButton.cpp  IconButton.h  PrimaryColorButton.cpp  PrimaryColorButton.h  SecondaryColorButton.cpp  SecondaryColorButton.h
presentation/viewComponents/textFields/: PrimaryTextField.cpp  PrimaryTextField.h  SecondaryTextField.cpp  SecondaryTextField.h
